user card hiij duusgaw

--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -4,8 +4,15 @@
 .SkillsName {
   background-color: aqua;
   border-radius: 5px;
-  margin: 25px;
+  margin: 10px;
   width: 70px;
 
   text-align: center;
+}
+.container {
+  display: flex;
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
 }
