--- a/src/components/Background.module.css
+++ b/src/components/Background.module.css
@@ -1,4 +1,7 @@
 .Background {
   background-color: white;
   border: 1px solid red;
+  border-radius: 10px;
+  margin-left: 350px;
+  margin-right: 350px;
 }
