--- a/src/components/Name.module.css
+++ b/src/components/Name.module.css
@@ -1,3 +1,13 @@
 .Name {
   font-size: 15px;
+  margin-left: 10px;
+}
+.Check {
+  width: 18px;
+  height: 18px;
+  padding-top: 15px;
+}
+.CheckName {
+  display: flex;
+  flex-direction: row;
 }
